--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -20,6 +20,8 @@ dependencies:
   provider: ^6.0.3
   injectable: ^1.5.0
   get_it: ^7.2.0
+  sqflite: ^2.0.2+1
+  path: ^1.8.0
 
 dev_dependencies:
   flutter_test:
