--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -7,7 +7,7 @@ jobs:
       - uses: actions/checkout@v3
       - uses: subosito/flutter-action@v2
         with:
-          channel: 'stable''
+          channel: 'stable'
       - run: flutter pub get
       - run: flutter test
       - run: flutter build apk
