--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,7 +1,7 @@
 name: Flutter build and test
 on: [push]
 jobs:
-  Explore-GitHub-Actions:
+  Build-And-Test:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
