--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -10,6 +10,7 @@ jobs:
           channel: 'stable'
       - run: flutter pub get
       - run: flutter packages pub run build_runner build --delete-conflicting-outputs
+      - run: flutter analyze
       - run: flutter test
       - run: flutter build apk -t lib/main_prod.dart
       - run: flutter build appbundle -t lib/main_prod.dart
