--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -17,7 +17,7 @@ jobs:
       - name: Appbundle build
         run: flutter build appbundle -t lib/main_prod.dart
       - name: iOS build
-        run: flutter build ios -t lib/main_prod.dart
+        run: flutter build ios --no-codesign -t lib/main_prod.dart
       - name: Test
         run: flutter test --coverage
       - name: Upload coverage
